--- a/learn/docker-compose.yml
+++ b/learn/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
   next:
     build:
-      context: hacklondonproject
+      context: learn
     ports:
       - "3000:3000"
     tty: true
